# cyndikator

./: Cargo.toml  LICENSE
conf/: cyndikator.plist  cyndikator.service  types.lua
cyndikator/: Cargo.toml
cyndikator-atom/: Cargo.toml
cyndikator-atom/src/: errs.rs  impls.rs  lib.rs
cyndikator-atom/src/test/: full.xml  mod.rs
cyndikator-atom/src/types/: deser.rs  mod.rs
cyndikator-dispatch/: Cargo.toml
cyndikator-dispatch/src/: lib.rs
cyndikator-dispatch/src/dispatch/: mod.rs  test.rs
cyndikator-dispatch/src/dispatch/parse/: mod.rs  test.rs
cyndikator-dispatch/src/dispatch/runtime/: mod.rs
cyndikator-dispatch/src/dispatch/token/: mod.rs
cyndikator-dispatch/src/event/: mod.rs
cyndikator-dispatch/src/lua/: mod.rs
cyndikator-rss/: Cargo.toml
cyndikator-rss/src/: err.rs  lib.rs  types.rs
cyndikator-rss/src/impls/: mod.rs
cyndikator-rss/src/test/: mod.rs  rss.xml
cyndikator-rss/src/types/: deser.rs  mod.rs
cyndikator/migrations/: V1__seed.sql
cyndikator/src/: main.rs
cyndikator/src/cli/: add.rs  init.rs  ls.rs  mod.rs  preview.rs  run.rs  track.rs
cyndikator/src/cli/view/: mod.rs
cyndikator/src/config/: mod.rs
cyndikator/src/daemon/: mod.rs  perform.rs  ticker.rs  tracker.rs
cyndikator/src/daemon/dispatcher/: mod.rs
cyndikator/src/daemon/dispatcher/act/: mod.rs
cyndikator/src/daemon/dispatcher/cond/: mod.rs
cyndikator/src/db/: mod.rs
cyndikator/src/fetcher/: atom.rs  mod.rs  rss.rs
cyndikator/src/ticker/: mod.rs
cyndikator/src/tracker/: mod.rs
cyndikator/src/view/: mod.rs  raw.rs  record.rs  stat.rs
cyndikator/src/view/draw/: alt.rs  clear.rs  cur.rs  full.rs  mod.rs
cyndikator/src/view/inter/: mod.rs  norm.rs  search.rs
src/: lib.rs  main.rs
src/client/: builder.rs  mod.rs
src/client/daemon/: feeds.rs  fetch.rs  mod.rs  signals.rs
src/client/db/: feed.rs  feeds.rs  mod.rs  schema.sql  track.rs  untrack.rs
src/cmd/: eval.rs  fetch.rs  mod.rs  run.rs  track.rs  untrack.rs
src/db/: feeds.rs  list.rs  mod.rs  tracking.rs  types.rs
src/feed/: lua.rs  mod.rs
src/fetcher/: mod.rs
src/interp/: alert.rs  exec.rs  mod.rs  record.rs
src/runtime/: env.rs  inst.rs  mod.rs
