[package]
name = "cyndikator-atom"
version = "0.1.0"
authors = ["eulegang <eulegang@eulegang.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = "1.0"
thiserror = { version = "1.0" }
html-escape = { version = "0.2.6" }
quick-xml = { version = "0.21.0", features = [ "serialize" ] }
