[package]
name = "cyndikator-rss"
version = "0.1.0"
authors = ["eulegang <eulegang@eulegang.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.21.0", features = [ "serialize" ] }
reqwest = { version = "0.11.0", optional = true }
url = { version = "2.2", optional = true }
thiserror = { version = "1.0" }

[features]
default = [ "fetch" ]
fetch = [ "reqwest", "url" ]

