[package]
name = "cyndikator"
version = "0.1.0"
authors = ["eulegang <eulegang@eulegang.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cynd"
path = "src/main.rs"

[dependencies]
eyre = "0.6"
thiserror = "1.0"
structopt = "0.3"
dirs = "3.0"
tokio = { version = "1.0", features = [ "full" ] }
rusqlite = { version = "0.24" }
refinery = { version = "0.5", features = [ "rusqlite" ] }
