[package]
name = "cyndikator"
version = "0.2.2"
authors = ["eulegang <eulegang@eulegang.dev>"]
edition = "2018"
license = "MIT"
description = "A cli rss reader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cynd"
path = "src/main.rs"

[dependencies]
eyre = "0.6"
thiserror = "1.0"
clap = { version = "3.0", features = [ "derive", "env" ] }
dirs = "3.0"
tokio = { version = "1.0", features = [ "full" ] }
rusqlite = { version = "0.26", features = [ "chrono" ] }
refinery = { version = "0.8", features = [ "rusqlite" ] }
reqwest = { version = "0.11.0" }
url = { version = "2.2" }
chrono = { version = "0.4" }
tabular = { version = "0.1" }
futures = { version = "0.3" }
nom = { version = "6.1" }
wait-timeout = { version = "0.2" }
notify-rust = { version = "4.3" }
crossterm = { version = "0.19" }
open = { version = "1.5" }
toml = { version = "0.5" }
serde = { version = "1.0", features = [ "derive" ] }


log = { version = "0.4" }
pretty_env_logger = { version = "0.4" }

feed-rs = "0.6"

cyndikator-dispatch = { path = "../cyndikator-dispatch", version = "0.1.1" }
